# esphome-linux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  cross.Dockerfile  esphome-ble-proxy.service  meson.build
.github/workflows/: build.yml
bluez/: Makefile  build.sh
cross/: arm-linux.txt  ingenic-t31.txt  mips-linux.txt
libble/: build.sh
nimble/: Makefile  build.sh
plugins/bluetooth_proxy/: README.md  ble_scanner.cpp  ble_scanner.h  meson.build
scripts/: build-deps.sh  build-ingenic-t31.sh  build.sh
src/: ble_scanner.c  esphome_api.c  esphome_proto.c  main.c
src/include/: esphome_api.h  esphome_proto.h
